[gd_scene load_steps=23 format=2]

[ext_resource path="res://Immagini/MappaPrincipale/SP2.png" type="Texture" id=1]
[ext_resource path="res://Immagini/Personaggio/PlayerMan.png" type="Texture" id=2]
[ext_resource path="res://Fonts/PTSerif-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Immagini/MappaPrincipale/Cartello.png" type="Texture" id=4]
[ext_resource path="res://Scene/Game.gd" type="Script" id=5]
[ext_resource path="res://Scene/ASchermo/UIRidotto.tscn" type="PackedScene" id=6]
[ext_resource path="res://Immagini/MappaPrincipale/zonaGrigia.png" type="Texture" id=7]
[ext_resource path="res://Immagini/MappaPrincipale/SceneBlocco.tres" type="Animation" id=8]
[ext_resource path="res://Audio/MusicaMappe.mp3" type="AudioStream" id=9]
[ext_resource path="res://Audio/AzioneErrata.wav" type="AudioStream" id=10]
[ext_resource path="res://Immagini/MappaPrincipale/Mappa.png" type="Texture" id=11]
[ext_resource path="res://Immagini/MappaPrincipale/SP3.png" type="Texture" id=12]
[ext_resource path="res://Immagini/MappaPrincipale/SP1.png" type="Texture" id=13]
[ext_resource path="res://Scene/Inizio.tscn" type="PackedScene" id=14]

[sub_resource type="DynamicFont" id=8]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 59
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=11]
resource_name = "ApparizioneScrittaBlocco"
length = 0.06
tracks/0/type = "audio"
tracks/0/path = NodePath("../ScrittaBlocco/AudioStreamPlayer2D")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=7]
resource_name = "(0;0)-(0;1)"
length = 0.6
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 271, 424 ), Vector2( 287, 360 ), Vector2( 303, 304 ), Vector2( 303, 272 ), Vector2( 303, 240 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("PlayerMan:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.4, 0.4 ), Vector2( 0.35, 0.35 ), Vector2( 0.3, 0.3 ), Vector2( 0.25, 0.25 ), Vector2( 0.2, 0.2 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "(0;0)-(1;0)"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 271, 424 ), Vector2( 383, 432 ), Vector2( 479, 416 ), Vector2( 575, 440 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "(1;0)-(2;0)"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 17, 16, 15, 14, 13, 12 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerMan:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 575, 440 ), Vector2( 639, 448 ), Vector2( 711, 448 ), Vector2( 799, 432 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "idle"
length = 0.25
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerMan:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 2, 1 ]
}

[node name="Game" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 5 )

[node name="Mappa" type="Sprite" parent="."]
scale = Vector2( 1.04, 1 )
texture = ExtResource( 11 )
centered = false

[node name="Mercante" type="Sprite" parent="."]
position = Vector2( 284, 276 )
scale = Vector2( 0.55, 0.4 )
texture = ExtResource( 7 )

[node name="LivelloTutorial" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 289, 499 )
scale = Vector2( 1.02, 1 )
texture = ExtResource( 7 )

[node name="Livello1" type="Sprite" parent="."]
position = Vector2( 559, 511 )
scale = Vector2( 1.02, 1 )
texture = ExtResource( 7 )

[node name="Livello2" type="Sprite" parent="."]
position = Vector2( 778, 512 )
scale = Vector2( 1.02, 1 )
texture = ExtResource( 7 )

[node name="InProgress" type="Sprite" parent="."]
position = Vector2( 971, 469 )
scale = Vector2( 1.02, 1 )
texture = ExtResource( 7 )

[node name="Cartello" type="Sprite" parent="."]
position = Vector2( 921, 420 )
texture = ExtResource( 4 )

[node name="Label4" type="Label" parent="."]
margin_left = 876.0
margin_top = 354.0
margin_right = 959.0
margin_bottom = 381.0
custom_fonts/font = SubResource( 8 )
text = "in progress"
align = 1
clip_text = true

[node name="PlayerMan" type="Sprite" parent="."]
position = Vector2( 271, 424 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 2 )
flip_h = true
hframes = 6
vframes = 5
frame = 3

[node name="LivelloBloccato" type="Label" parent="PlayerMan"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -576.5
margin_top = -441.5
margin_right = 76.5
margin_bottom = -280.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "level locked 
to continue finish the level"
align = 1

[node name="ScrittaBlocco" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimationPlayer")
anims/ApparizioneScrittaBlocco = SubResource( 11 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="ScrittaBlocco"]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/(0;0)-(0;1)" = SubResource( 7 )
"anims/(0;0)-(1;0)" = SubResource( 5 )
"anims/(1;0)-(2;0)" = SubResource( 6 )
anims/Blocco = ExtResource( 8 )
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="UI" parent="." instance=ExtResource( 6 )]

[node name="MusicaSottofondo" type="AudioStreamPlayer2D" parent="."]
pause_mode = 2
stream = ExtResource( 9 )
volume_db = -10.658
autoplay = true
max_distance = 100000.0

[node name="Spazzatura" type="Sprite" parent="."]
texture = ExtResource( 13 )
centered = false

[node name="Spazzatura2" type="Sprite" parent="."]
scale = Vector2( 1.035, 1 )
texture = ExtResource( 1 )
centered = false

[node name="Spazzatura3" type="Sprite" parent="."]
scale = Vector2( 1.035, 1 )
texture = ExtResource( 12 )
centered = false

[node name="Inizio" parent="." instance=ExtResource( 14 )]

[connection signal="animation_finished" from="ScrittaBlocco" to="." method="_on_ScrittaBlocco_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
